The need to enable the --disable-screensaver option is less unintuitive but still very unintuitive. And then, an enabling option that starts with --disable is confusing as well, though I admit I can't really think of a less confusing name.
Maybe make this the default and have an option to disable the screensaver's disabling, ie. start the "screensaver" plugin by default.
To answer: it would obviously be the default behaviour. I won't make the option "screensaver" which would be default false, that would be utterly stupid.
Anyway, if there is code in x11 intf that could work, it's by far the best solution.
Of course it would have to be done in all vout plugins, but that's obvious you need that. Disabling screensaver is a specific work, and Windows/OS X already do that.