Default to disabling screensaver under X (Closes:#253) Hide screensaver interface from the prefs